Сверстали блок hero и преимущества

--- a/index.html
+++ b/index.html
@@ -9,39 +9,83 @@
 <body>
   <header class="page-header">
     <nav class="navigation">
+
+      <a class="navigation-logo" href="#">
+        <img class="page-header-logo" src="#" alt="Логотип Седоны.">
+      </a>
+
       <ul class="navigation-list">
         <li class="navigation-item">
-          <a href="#" class="navigation-link">Главная</a>
+          <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
         </li>
         <li class="navigation-item">
-          <a href="#" class="navigation-link">О Седоне</a>
+          <a class="navigation-link" href="#">О Седоне</a>
         </li>
         <li class="navigation-item">
-          <a href="catalog.html" class="navigation-link">Гостиницы</a>
+          <a class="navigation-link" href="catalog.html">Гостиницы</a>
         </li>
       </ul>
 
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
-          <a href="#" class="navigation-link">
+          <a class="navigation-link" href="#">
             <span class="vidually-hidden">Поиск</span>
           </a>
         </li>
         <li class="navigation-item">
-          <a href="#" class="navigation-link">
+          <a class="navigation-link" href="#">
             <span class="vidually-hidden">Избранное</span>
           </a>
         </li>
         <li class="navigation-item">
-          <a href="#" class="navigation-link">Хочу сюда!
-            <!-- <span class="vidually-hidden">(зарегистрироваться/оставить заявку?)</span> -->
-          </a>
+          <a class="navigation-link" href="#">Хочу сюда!</a>
         </li>
       </ul>
+
     </nav>
   </header>
 
-  <main>
+  <main class="main-index">
+    <section class="hero">
+      <h1 class="visually-hidden">Sedona</h1>
+      <img class="hero-img" src="#" alt="Добро пожаловать в Седону. Потому что Гранд-Каньон отстой!">
+      <p class="hero-subtitle">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+      <p  class="hero-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+    </section>
+
+    <section class="reasons">
+      <h2 class="visually-hidden">Список причин</h2>
+      <ul class="reasons-list">
+        <li class="reasons-item">
+          <h3 class="reasons-item-name">Настоящий городок</h3>
+          <p class="reasons-item-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          <img class="reasons-item-img" src="#" alt="Вид на город Седона.">
+        </li>
+        <li class="reasons-item">
+          <h3 class="reasons-item-name">Небольшая площадь</h3>
+          <p class="reasons-item-text">Все достопримечательности находятся очень близко</p>
+        </li>
+        <li class="reasons-item">
+          <h3 class="reasons-item-name">Красивая дорога</h3>
+          <p class="reasons-item-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </li>
+        <li class="reasons-item">
+          <h3 class="reasons-item-name">Мало туристов</h3>
+          <p class="reasons-item-text">Большинство едет в Гранд Каньон и толпится там</p>
+        </li>
+        <li class="reasons-item">
+          <img class="reasons-item-img" src="#" alt="Мост Дьявола.">
+          <h3 class="reasons-item-name">Там есть мост дьявола</h3>
+          <p class="reasons-item-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+        </li>
+      </ul>
+    </section>
+
+    <section class="recommendation">
+
+    </section>
+
+
 
   </main>
 
