Сверстали блок Рекомендации

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <section class="hero">
       <h1 class="visually-hidden">Sedona</h1>
       <img class="hero-img" src="#" alt="Добро пожаловать в Седону. Потому что Гранд-Каньон отстой!">
-      <p class="hero-subtitle">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-      <p  class="hero-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+      <p class="hero-subtitle subtitle">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+      <p class="hero-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
     </section>
 
     <section class="reasons">
@@ -74,15 +74,37 @@
           <p class="reasons-item-text">Большинство едет в Гранд Каньон и толпится там</p>
         </li>
         <li class="reasons-item">
-          <img class="reasons-item-img" src="#" alt="Мост Дьявола.">
           <h3 class="reasons-item-name">Там есть мост дьявола</h3>
           <p class="reasons-item-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          <img class="reasons-item-img" src="#" alt="Мост Дьявола.">
         </li>
       </ul>
     </section>
 
     <section class="recommendation">
+      <h2 class="visually-hidden"></h2>
+      <p class="recommendation-subtitle subtitle">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+      <p class="recommendation-text">Опытный персонал и качественное обслуживание!</p>
 
+      <ul class="recommendation-list">
+        <li class="recommendation-item">
+          <h3 class="recommendation-item-name">Жильё</h3>
+          <p class="recommendation-item-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+        </li>
+        <li class="recommendation-item">
+          <h3 class="recommendation-item-name">Еда</h3>
+          <p class="recommendation-item-text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+        </li>
+        <li class="recommendation-item">
+          <h3 class="recommendation-item-name">Сувениры</h3>
+          <p class="recommendation-item-text">Не только китайского, но и настоящего местного производства!</p>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2 class="visually-hidden"></h2>
+      <p class=" subtitle"></p>
     </section>
 
 
