--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#">Хочу сюда!</a>
+          <a class="navigation-link button" href="#">Хочу сюда!</a>
         </li>
       </ul>
 
@@ -82,7 +82,7 @@
     </section>
 
     <section class="recommendation">
-      <h2 class="visually-hidden"></h2>
+      <h2 class="visually-hidden">Пожелания и рекомендации</h2>
       <p class="recommendation-subtitle subtitle">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
       <p class="recommendation-text">Опытный персонал и качественное обслуживание!</p>
 
@@ -102,17 +102,48 @@
       </ul>
     </section>
 
-    <section>
-      <h2 class="visually-hidden"></h2>
-      <p class=" subtitle"></p>
+    <section class="search-hotel">
+      <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
+      <p class="search-hotel-subtitle subtitle">Заинтересовались?</p>
+      <p class="search-hotel-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <button class="search-hotel-button button" type="button">ПОИСК ГОСТИНИЦЫ В седоне</button>
     </section>
 
-
-
+    <section class="subscription">
+      <h2 class="subscription-subtitle subtitle">Подпишитесь на рассылку</h2>
+      <p class="subscription-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
+        <input class="subscription-email" type="email" name="subscription-email" id="subscription-email"
+          placeholder="Ваш e-mail" required>
+        <button class="subscription-button button" type="submit">Подписаться</button>
+      </form>
+    </section>
   </main>
 
-  <footer>
+  <footer class="page-footer">
+    <ul class="footer-social-list">
+      <li class="footer-social-item">
+        <a class="button" href="https://vk.com/htmlacademy">
+          <span class="visually-hidden">Вконтакте</span>
+        </a>
+      </li>
+      <li class="footer-social-item">
+        <a class="button" href="https://t.me/htmlacademy">
+          <span class="visually-hidden">Телеграм</span>
+        </a>
+      </li>
+      <li class="footer-social-item">
+        <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+          <span class="visually-hidden">Ютуб</span>
+        </a>
+      </li>
+    </ul>
 
+    <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+
+    <a class="academy-logo" href="https://htmlacademy.ru/">
+        <span class="visually-hidden">HTMLAcademy</span>
+    </a>
   </footer>
 </body>
 </html>
