--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
   </main>
 
   <footer class="page-footer">
+    <h2 class="visually-hidden">Контакты</h2>
     <ul class="footer-social-list">
       <li class="footer-social-item">
         <a class="button" href="https://vk.com/htmlacademy">
