--- a/catalog.html
+++ b/catalog.html
@@ -194,11 +194,29 @@
           <span class="hotels-star-classification visually-hidden">2 звезды</span>
           <span class="hotels-rating">Рейтинг: 5,0</span>
         </li>
+      </ul>
 
+      <ul class="pagination">
+        <li class="pagination-item">
+          <a class="pagination-link pagination-current">1</a>
+        </li>
+        <li class="pagination-item">
+          <a class="pagination-link" href="#">2</a>
+        </li>
+        <li class="pagination-item">
+          <a class="pagination-link" href="#">3</a>
+        </li>
+        <li class="pagination-item">
+          <a class="pagination-link" href="#">4</a>
+        </li>
+        <li class="pagination-item">
+          <a class="pagination-link" href="#">...</a>
+        </li>
+        <li class="pagination-item">
+          <a class="pagination-link" href="#">10</a>
+        </li>
       </ul>
     </section>
-
-
 
     <section class="subscription">
       <h2 class="subscription-subtitle subtitle">Подпишитесь на рассылку</h2>
