Добавили кнопкам атрибут type

--- a/catalog.html
+++ b/catalog.html
@@ -151,7 +151,7 @@
           <span class="hotels-card-type">Гостиница</span>
           <b class="hotels-card-price">От 4000 ₽</b>
           <a class="hotels-card-button button" href="#">подробнее</a>
-          <button class="hotels-card-button button" href="#">в избранное</button>
+          <button class="hotels-card-button button" type="button">в избранное</button>
           <span class="hotels-star-classification visually-hidden">4 звезды</span>
           <span class="hotels-rating">Рейтинг: 8,5</span>
         </li>
@@ -177,7 +177,7 @@
           <span class="hotels-card-type">Гостиница</span>
           <b class="hotels-card-price">От 2500 ₽</b>
           <a class="hotels-card-button button" href="#">подробнее</a>
-          <button class="hotels-card-button button" href="#">в избранное</button>
+          <button class="hotels-card-button button" type="button">в избранное</button>
           <span class="hotels-star-classification visually-hidden">3 звезды</span>
           <span class="hotels-rating">Рейтинг: 6,9</span>
         </li>
@@ -190,7 +190,7 @@
           <span class="hotels-card-type">Гостиница</span>
           <b class="hotels-card-price">От 1500 ₽</b>
           <a class="hotels-card-button button" href="#">подробнее</a>
-          <button class="hotels-card-button button" href="#">в избранное</button>
+          <button class="hotels-card-button button" type="button">в избранное</button>
           <span class="hotels-star-classification visually-hidden">2 звезды</span>
           <span class="hotels-rating">Рейтинг: 5,0</span>
         </li>
