--- a/catalog.html
+++ b/catalog.html
@@ -145,7 +145,7 @@
       <ul class="hotels-list">
         <li class="hotels-card">
           <a class="hotels-card-link" href="#">
-            <img class="hotels-card-image" src="#" alt="">
+            <img class="hotels-card-image" src="#" alt="Фото гостиницы">
             <h3 class="hotels-card-title">Amara Resort & Spa</h3>
           </a>
           <span class="hotels-card-type">Гостиница</span>
@@ -158,7 +158,7 @@
 
         <li class="hotels-card">
           <a class="hotels-card-link" href="#">
-            <img class="hotels-card-image" src="#" alt="">
+            <img class="hotels-card-image" src="#" alt="Фото гостиницы">
             <h3 class="hotels-card-title">Villas at Poco Diablo</h3>
           </a>
           <span class="hotels-card-type">Гостиница</span>
@@ -171,7 +171,7 @@
 
         <li class="hotels-card">
           <a class="hotels-card-link" href="#">
-            <img class="hotels-card-image" src="#" alt="">
+            <img class="hotels-card-image" src="#" alt="Фото гостиницы">
             <h3 class="hotels-card-title">Desert Quail Inn</h3>
           </a>
           <span class="hotels-card-type">Гостиница</span>
@@ -184,7 +184,7 @@
 
         <li class="hotels-card">
           <a class="hotels-card-link" href="#">
-            <img class="hotels-card-image" src="#" alt="">
+            <img class="hotels-card-image" src="#" alt="Фото гостиницы">
             <h3 class="hotels-card-title">GreenTree Inn</h3>
           </a>
           <span class="hotels-card-type">Гостиница</span>
