--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <title>Седона</title>
 </head>
 <body>
-  <header class="page-header">
+  <header class="page-header" data-test="header">
     <nav class="navigation">
 
       <a class="navigation-logo" href="#">
@@ -45,7 +45,7 @@
     </nav>
   </header>
 
-  <main class="main-catalog">
+  <main class="main-catalog" data-test="main">
     <header class="catalog-header">
       <h1 class="catalog-header-title">Гостиницы Седоны</h1>
       <ul class="breadcrumbs">
@@ -60,7 +60,7 @@
       </ul>
     </header>
 
-    <section class="catalog-filter">
+    <section class="catalog-filter" data-test="filter">
       <h2 class="visually-hidden">Список гостиниц с фильтрами</h2>
       <form class="catalog-filter-form" action="https://echo.htmlacademy.ru/" method="get">
         <fieldset class="catalog-filter-group">
@@ -141,7 +141,7 @@
       </a>
     </section>
 
-    <section class="catalog-hotels">
+    <section class="catalog-hotels" data-test="catalog">
       <ul class="hotels-list">
         <li class="hotels-card">
           <a class="hotels-card-link" href="#">
@@ -218,7 +218,7 @@
       </ul>
     </section>
 
-    <section class="subscription">
+    <section class="subscription" data-test="subscribe">
       <h2 class="subscription-subtitle subtitle">Подпишитесь на рассылку</h2>
       <p class="subscription-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
       <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -229,7 +229,7 @@
     </section>
   </main>
 
-  <footer class="page-footer">
+  <footer class="page-footer" data-test="footer">
     <h2 class="visually-hidden">Контакты</h2>
     <ul class="footer-social-list">
       <li class="footer-social-item">
