--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <ul class="navigation-list">
         <li class="navigation-item">
-          <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
+          <a class="navigation-link navigation-link-current" title="Текущая страница">Главная</a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">О Седоне</a>
@@ -49,12 +49,11 @@
     <section class="hero">
       <h1 class="visually-hidden">Sedona</h1>
       <img class="hero-img" src="#" alt="Добро пожаловать в Седону. Потому что Гранд-Каньон отстой!">
-      <p class="hero-subtitle subtitle">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-      <p class="hero-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
     </section>
 
     <section class="reasons">
-      <h2 class="visually-hidden">Список причин</h2>
+      <h2 class="reasons-subtitle subtitle">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <p class="reasons-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       <ul class="reasons-list">
         <li class="reasons-item">
           <h3 class="reasons-item-name">Настоящий городок</h3>
@@ -82,8 +81,8 @@
     </section>
 
     <section class="recommendation">
-      <h2 class="visually-hidden">Пожелания и рекомендации</h2>
-      <p class="recommendation-subtitle subtitle">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+      <!-- <h2 class="visually-hidden">Пожелания и рекомендации</h2> -->
+      <h2 class="recommendation-subtitle subtitle">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
       <p class="recommendation-text">Опытный персонал и качественное обслуживание!</p>
 
       <ul class="recommendation-list">
@@ -103,8 +102,8 @@
     </section>
 
     <section class="search-hotel">
-      <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
-      <p class="search-hotel-subtitle subtitle">Заинтересовались?</p>
+      <!-- <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2> -->
+      <h2 class="search-hotel-subtitle subtitle">Заинтересовались?</h2>
       <p class="search-hotel-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       <button class="search-hotel-button button" type="button">ПОИСК ГОСТИНИЦЫ В седоне</button>
     </section>
@@ -143,7 +142,7 @@
     <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
 
     <a class="academy-logo" href="https://htmlacademy.ru/">
-        <span class="visually-hidden">HTMLAcademy</span>
+        <span class="visually-hidden">Ссылка на страницу разработчика - HTMLAcademy</span>
     </a>
   </footer>
 </body>
