--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   <header class="page-header">
     <nav class="navigation">
 
-      <a class="navigation-logo" href="#">
+      <a class="navigation-logo" href="index.html">
         <img class="page-header-logo" src="#" alt="Логотип Седоны.">
       </a>
 
@@ -148,12 +148,12 @@
             <img class="hotels-card-image" src="#" alt="Фото гостиницы">
             <h3 class="hotels-card-title">Amara Resort & Spa</h3>
           </a>
-          <span class="hotels-card-type">Гостиница</span>
-          <b class="hotels-card-price">От 4000 ₽</b>
+          <p class="hotels-card-type">Гостиница</p>
+          <p class="hotels-card-price">От 4000 ₽</p>
           <a class="hotels-card-button button" href="#">подробнее</a>
           <button class="hotels-card-button button" type="button">в избранное</button>
-          <span class="hotels-star-classification visually-hidden">4 звезды</span>
-          <span class="hotels-rating">Рейтинг: 8,5</span>
+          <p class="hotels-star-classification visually-hidden">4 звезды из 5</p>
+          <p class="hotels-rating">Рейтинг: 8,5</p>
         </li>
 
         <li class="hotels-card">
@@ -161,12 +161,12 @@
             <img class="hotels-card-image" src="#" alt="Фото гостиницы">
             <h3 class="hotels-card-title">Villas at Poco Diablo</h3>
           </a>
-          <span class="hotels-card-type">Гостиница</span>
-          <b class="hotels-card-price">От 5000 ₽</b>
+          <p class="hotels-card-type">Гостиница</p>
+          <p class="hotels-card-price">От 5000 ₽</p>
           <a class="hotels-card-button button" href="#">подробнее</a>
           <a class="hotels-card-button button" href="#">в избранном</a>
-          <span class="hotels-star-classification visually-hidden">4 звезды</span>
-          <span class="hotels-rating">Рейтинг: 9,2</span>
+          <p class="hotels-star-classification visually-hidden">4 звезды из 5</p>
+          <p class="hotels-rating">Рейтинг: 9,2</p>
         </li>
 
         <li class="hotels-card">
@@ -174,12 +174,12 @@
             <img class="hotels-card-image" src="#" alt="Фото гостиницы">
             <h3 class="hotels-card-title">Desert Quail Inn</h3>
           </a>
-          <span class="hotels-card-type">Гостиница</span>
-          <b class="hotels-card-price">От 2500 ₽</b>
+          <p class="hotels-card-type">Гостиница</p>
+          <p class="hotels-card-price">От 2500 ₽</p>
           <a class="hotels-card-button button" href="#">подробнее</a>
           <button class="hotels-card-button button" type="button">в избранное</button>
-          <span class="hotels-star-classification visually-hidden">3 звезды</span>
-          <span class="hotels-rating">Рейтинг: 6,9</span>
+          <p class="hotels-star-classification visually-hidden">3 звезды из 5</p>
+          <p class="hotels-rating">Рейтинг: 6,9</p>
         </li>
 
         <li class="hotels-card">
@@ -187,12 +187,12 @@
             <img class="hotels-card-image" src="#" alt="Фото гостиницы">
             <h3 class="hotels-card-title">GreenTree Inn</h3>
           </a>
-          <span class="hotels-card-type">Гостиница</span>
-          <b class="hotels-card-price">От 1500 ₽</b>
+          <p class="hotels-card-type">Гостиница</p>
+          <p class="hotels-card-price">От 1500 ₽</p>
           <a class="hotels-card-button button" href="#">подробнее</a>
           <button class="hotels-card-button button" type="button">в избранное</button>
-          <span class="hotels-star-classification visually-hidden">2 звезды</span>
-          <span class="hotels-rating">Рейтинг: 5,0</span>
+          <p class="hotels-star-classification visually-hidden">2 звезды из 5</p>
+          <p class="hotels-rating">Рейтинг: 5,0</p>
         </li>
       </ul>
 
