--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <header class="page-header">
     <nav class="navigation">
 
-      <a class="navigation-logo" href="#">
-        <img class="page-header-logo" src="#" alt="Логотип Седоны.">
+      <a class="navigation-logo" href="index.html" aria-current="page">
+        <img class="page-header-logo" src="images/logo.svg" alt="Логотип Седоны.">
       </a>
 
       <ul class="navigation-list">
         <li class="navigation-item">
-          <a class="navigation-link navigation-link-current" title="Текущая страница">Главная</a>
+          <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">О Седоне</a>
@@ -58,7 +58,7 @@
         <li class="reasons-item">
           <h3 class="reasons-item-name">Настоящий городок</h3>
           <p class="reasons-item-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          <img class="reasons-item-img" src="#" alt="Вид на город Седона.">
+          <img class="reasons-item-img" src="#" alt="Вид на двухэтажный дом в Седоне.">
         </li>
         <li class="reasons-item">
           <h3 class="reasons-item-name">Небольшая площадь</h3>
