Изменили секции в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -126,9 +126,9 @@
       </form>
     </section>
 
-    <section class="catalog-sorting">
-      <h2 class="visually-hidden">Сортировка результата фильтров</h2>
-      <p class="catalog-sorting-subtitle subtitle">Найдено гостиниц: 38</p>
+    <section class="hotels">
+      <h2 class="visually-hidden">Сортировка результата по фильтрам</h2>
+      <p class="hotels-subtitle subtitle">Найдено гостиниц: 38</p>
 
       <select class="select-control" aria-label="Сортировка">
         <option value="cheap">Сначала дешевые</option>
@@ -136,18 +136,16 @@
         <option value="popular">Сначала популярные</option>
       </select>
 
-      <a class="catalog-sorting-button catalog-sorting-button-current" href="#">
+      <a class="hotels-sorting-button hotels-sorting-button-current" href="#">
         <span class="visually-hidden">Показать сеткой</span>
       </a>
-      <a class="catalog-sorting-button" href="#">
+      <a class="hotels-sorting-button" href="#">
         <span class="visually-hidden">Показать крупными карточками</span>
       </a>
-      <a class="catalog-sorting-button" href="#">
+      <a class="hotels-sorting-button" href="#">
         <span class="visually-hidden">Показать списком</span>
       </a>
-    </section>
 
-    <section class="catalog-hotels">
       <ul class="hotels-list">
         <li class="hotels-card">
           <a class="hotels-card-link" href="#">
