изменили имена классов в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -136,13 +136,13 @@
         <option value="popular">Сначала популярные</option>
       </select>
 
-      <a class="hotels-sorting-button hotels-sorting-button-current" href="#">
+      <a class="hotels-view hotels-view-current" href="#">
         <span class="visually-hidden">Показать сеткой</span>
       </a>
-      <a class="hotels-sorting-button" href="#">
+      <a class="hotels-view" href="#">
         <span class="visually-hidden">Показать крупными карточками</span>
       </a>
-      <a class="hotels-sorting-button" href="#">
+      <a class="hotels-view" href="#">
         <span class="visually-hidden">Показать списком</span>
       </a>
 
