--- a/catalog.html
+++ b/catalog.html
@@ -153,7 +153,7 @@
       <ul class="hotels-list">
         <li class="hotels-card">
           <a class="hotels-card-link" href="#">
-            <img class="hotels-card-image" src="#" alt="Фото гостиницы">
+            <img class="hotels-card-image" src="images/catalog/hotel-1.jpg" alt="Вид из гостиницы Amara Resort & Spa.">
             <h3 class="hotels-card-title">Amara Resort & Spa</h3>
           </a>
           <p class="hotels-card-type">Гостиница</p>
@@ -166,7 +166,7 @@
 
         <li class="hotels-card">
           <a class="hotels-card-link" href="#">
-            <img class="hotels-card-image" src="#" alt="Фото гостиницы">
+            <img class="hotels-card-image" src="images/catalog/hotel-2.jpg" alt="Вид из гостиницы Villas at Poco Diablo.">
             <h3 class="hotels-card-title">Villas at Poco Diablo</h3>
           </a>
           <p class="hotels-card-type">Гостиница</p>
@@ -179,7 +179,7 @@
 
         <li class="hotels-card">
           <a class="hotels-card-link" href="#">
-            <img class="hotels-card-image" src="#" alt="Фото гостиницы">
+            <img class="hotels-card-image" src="images/catalog/hotel-3.jpg" alt="Вид из гостиницы Desert Quail Inn.">
             <h3 class="hotels-card-title">Desert Quail Inn</h3>
           </a>
           <p class="hotels-card-type">Гостиница</p>
@@ -192,7 +192,7 @@
 
         <li class="hotels-card">
           <a class="hotels-card-link" href="#">
-            <img class="hotels-card-image" src="#" alt="Фото гостиницы">
+            <img class="hotels-card-image" src="images/catalog/hotel-4.jpg" alt="Вид из гостиницы GreenTree Inn.">
             <h3 class="hotels-card-title">GreenTree Inn</h3>
           </a>
           <p class="hotels-card-type">Гостиница</p>
