--- a/catalog.html
+++ b/catalog.html
@@ -50,7 +50,7 @@
       <ul class="breadcrumbs">
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link" href="index.html">
-            <span class="visually-hidden">Перейти на главную страницу</span>
+            <span class="visually-hidden">Перейти на главную страницу.</span>
           </a>
         </li>
         <li class="breadcrumbs-item">
@@ -60,7 +60,7 @@
     </header>
 
     <section class="catalog-filter">
-      <h2 class="visually-hidden">Список гостиниц с фильтрами</h2>
+      <h2 class="visually-hidden">Список гостиниц с фильтрами.</h2>
       <form class="catalog-filter-form" action="https://echo.htmlacademy.ru/" method="get">
         <fieldset class="catalog-filter-group">
           <legend class="catalog-filter-title">Инфраструктура</legend>
@@ -120,7 +120,7 @@
     </section>
 
     <section class="hotels">
-      <h2 class="visually-hidden">Сортировка результата по фильтрам</h2>
+      <h2 class="visually-hidden">Сортировка результата по фильтрам.</h2>
       <p class="hotels-subtitle subtitle">Найдено гостиниц: 38</p>
 
       <select class="select-control" aria-label="Сортировка">
@@ -130,13 +130,13 @@
       </select>
 
       <a class="hotels-view hotels-view-current" href="#">
-        <span class="visually-hidden">Показать плиткой</span>
+        <span class="visually-hidden">Показать плиткой.</span>
       </a>
       <a class="hotels-view" href="#">
-        <span class="visually-hidden">Показать крупными карточками (слайдшоу)</span>
+        <span class="visually-hidden">Показать крупными карточками (слайдшоу).</span>
       </a>
       <a class="hotels-view" href="#">
-        <span class="visually-hidden">Показать списком</span>
+        <span class="visually-hidden">Показать списком.</span>
       </a>
 
       <ul class="hotels-list">
@@ -149,7 +149,9 @@
           <p class="hotels-card-price">От 4000 ₽</p>
           <a class="hotels-card-button button" href="#">подробнее</a>
           <button class="hotels-card-button button" type="button">в избранное</button>
-          <p class="hotels-star-classification visually-hidden">4 звезды из 5</p>
+          <p class="hotels-card-stars hotels-card-stars-4">
+            <span class="visually-hidden">4 звезды из 5.</span>
+          </p>
           <p class="hotels-rating">Рейтинг: 8,5</p>
         </li>
 
@@ -162,7 +164,9 @@
           <p class="hotels-card-price">От 5000 ₽</p>
           <a class="hotels-card-button button" href="#">подробнее</a>
           <a class="hotels-card-button button" href="#">в избранном</a>
-          <p class="hotels-star-classification visually-hidden">4 звезды из 5</p>
+          <p class="hotels-card-stars hotels-card-stars-4">
+            <span class="visually-hidden">4 звезды из 5.</span>
+          </p>
           <p class="hotels-rating">Рейтинг: 9,2</p>
         </li>
 
@@ -175,7 +179,9 @@
           <p class="hotels-card-price">От 2500 ₽</p>
           <a class="hotels-card-button button" href="#">подробнее</a>
           <button class="hotels-card-button button" type="button">в избранное</button>
-          <p class="hotels-star-classification visually-hidden">3 звезды из 5</p>
+          <p class="hotels-card-stars hotels-card-stars-3">
+            <span class="visually-hidden">3 звезды из 5.</span>
+          </p>
           <p class="hotels-rating">Рейтинг: 6,9</p>
         </li>
 
@@ -188,7 +194,9 @@
           <p class="hotels-card-price">От 1500 ₽</p>
           <a class="hotels-card-button button" href="#">подробнее</a>
           <button class="hotels-card-button button" type="button">в избранное</button>
-          <p class="hotels-star-classification visually-hidden">2 звезды из 5</p>
+          <p class="hotels-card-stars hotels-card-stars-2">
+            <span class="visually-hidden">2 звезды из 5.</span>
+          </p>
           <p class="hotels-rating">Рейтинг: 5,0</p>
         </li>
       </ul>
@@ -227,14 +235,14 @@
   </main>
 
   <footer class="page-footer">
-    <h2 class="visually-hidden">Контакты</h2>
+    <h2 class="visually-hidden">Контакты.</h2>
     <ul class="footer-social-list">
       <li class="footer-social-item">
         <a class="button" href="https://vk.com/htmlacademy">
           <svg xmlns="http://www.w3.org/2000/svg" width="25" height="15" fill="none" role="img" aria-hidden="true">
             <path fill="#83B3D3" fill-rule="evenodd" d="M24.116 1.804c.166-.546 0-.948-.795-.948h-2.625c-.668 0-.976.347-1.143.73 0 0-1.335 3.196-3.226 5.272-.612.602-.89.793-1.224.793-.167 0-.418-.19-.418-.738V1.804c0-.656-.184-.948-.74-.948H9.817c-.417 0-.668.304-.668.593 0 .621.946.765 1.043 2.513V7.76c0 .833-.153.984-.487.984-.89 0-3.055-3.21-4.34-6.885-.249-.715-.5-1.003-1.172-1.003H1.566c-.75 0-.9.347-.9.73 0 .682.89 4.07 4.145 8.551 2.17 3.06 5.225 4.72 8.008 4.72 1.67 0 1.875-.369 1.875-1.004V11.54c0-.737.158-.884.687-.884.39 0 1.057.192 2.615 1.667 1.78 1.75 2.073 2.533 3.075 2.533h2.625c.75 0 1.126-.368.91-1.096-.238-.724-1.088-1.775-2.215-3.022-.612-.71-1.53-1.475-1.809-1.858-.389-.49-.278-.71 0-1.147 0 0 3.2-4.426 3.533-5.929h.001Z" clip-rule="evenodd"/>
           </svg>
-          <span class="visually-hidden">Вконтакте</span>
+          <span class="visually-hidden">Вконтакте.</span>
         </a>
       </li>
       <li class="footer-social-item">
@@ -242,7 +250,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="18" height="16" fill="none" role="img" aria-hidden="true">
             <path fill="#83B3D3" d="M16.785.956.84 7.104C-.248 7.541-.24 8.148.64 8.42l4.094 1.277 9.472-5.976c.448-.272.857-.126.52.173l-7.673 6.925H7.05l.002.001-.283 4.22c.414 0 .597-.19.829-.414l1.988-1.934 4.136 3.055c.762.42 1.31.205 1.5-.706l2.715-12.795c.278-1.114-.425-1.618-1.153-1.29Z"/>
           </svg>
-          <span class="visually-hidden">Телеграм</span>
+          <span class="visually-hidden">Телеграм.</span>
         </a>
       </li>
       <li class="footer-social-item">
@@ -250,7 +258,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="23" height="18" fill="none" role="img" aria-hidden="true">
             <path fill="#83B3D3" d="M18.94.356H3.507C1.647.356.333 1.95.333 3.756V13.85c0 1.913 1.314 3.506 3.174 3.506H19.16c1.642 0 3.174-1.593 3.174-3.4v-10.2c-.219-1.806-1.532-3.4-3.393-3.4ZM7.995 12.894V4.819l7.333 4.037-7.333 4.038Z"/>
           </svg>
-          <span class="visually-hidden">Ютуб</span>
+          <span class="visually-hidden">Ютуб.</span>
         </a>
       </li>
     </ul>
@@ -268,7 +276,7 @@
           </clippath>
         </defs>
       </svg>
-      <span class="visually-hidden">Ссылка на страницу разработчика - HTMLAcademy</span>
+      <span class="visually-hidden">Ссылка на страницу разработчика - HTMLAcademy.</span>
     </a>
   </footer>
 </body>
