--- a/index.html
+++ b/index.html
@@ -29,17 +29,18 @@
 
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
-          <a class="navigation-link" href="#">
-            <span class="vidually-hidden">Поиск</span>
+          <a class="navigation-link user-search" href="#">
+            <span class="visually-hidden">Поиск</span>
           </a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#">
-            <span class="vidually-hidden">Избранное</span>
+          <a class="navigation-link user-favorite" href="#">
+            <span class="visually-hidden">Избранное</span>
+            <span class="user-favorite-count">12</span>
           </a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link button" href="#">Хочу сюда!</a>
+          <a class="navigation-link button button-brown" href="#">Хочу сюда!</a>
         </li>
       </ul>
     </nav>
@@ -53,38 +54,38 @@
 
     <section class="reasons">
       <h2 class="reasons-subtitle subtitle">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-      <p class="reasons-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+      <p class="reasons-text text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       <ul class="reasons-list reason">
-        <li class="reason-item">
+        <li class="reason-item darkblue-background">
           <h3 class="reason-name">Настоящий городок</h3>
           <p class="reason-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           <img class="reason-img" src="images/reasons-1.jpg" width="800" height="385" alt="Вид на двухэтажный дом в Седоне.">
         </li>
-        <li class="reason-item">
+        <li class="reason-item lightblue-background">
           <h3 class="reason-name">Небольшая площадь</h3>
           <p class="reason-description">Все достопримечательности находятся очень близко</p>
         </li>
-        <li class="reason-item">
+        <li class="reason-item blue-background">
           <h3 class="reason-name">Красивая дорога</h3>
           <p class="reason-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
-        <li class="reason-item">
+        <li class="reason-item lightblue-background">
           <h3 class="reason-name">Мало туристов</h3>
           <p class="reason-description">Большинство едет в Гранд Каньон и толпится там</p>
         </li>
-        <li class="reason-item">
+        <li class="reason-item darkblue-background">
           <h3 class="reason-name">Там есть мост дьявола</h3>
           <p class="reason-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-          <img class="reason-description" src="images/reasons-2.jpg" width="800" height="385" alt="Мост Дьявола.">
+          <img class="reason-img" src="images/reasons-2.jpg" width="800" height="385" alt="Мост Дьявола.">
         </li>
       </ul>
     </section>
 
     <section class="recommendation">
       <h2 class="recommendation-subtitle subtitle">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-      <p class="recommendation-text">Опытный персонал и качественное обслуживание!</p>
+      <p class="recommendation-text text">Опытный персонал и качественное обслуживание!</p>
       <ul class="recommendation-list">
-        <li class="recommendation-item">
+        <li class="recommendation-item lightblue-background">
           <h3 class="recommendation-name">Жильё</h3>
           <p class="recommendation-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
         </li>
@@ -92,7 +93,7 @@
           <h3 class="recommendation-name">Еда</h3>
           <p class="recommendation-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
         </li>
-        <li class="recommendation-item">
+        <li class="recommendation-item lightblue-background">
           <h3 class="recommendation-name">Сувениры</h3>
           <p class="recommendation-description">Не только китайского, но и настоящего местного производства!</p>
         </li>
@@ -101,17 +102,17 @@
 
     <section class="search">
       <h2 class="search-subtitle subtitle">Заинтересовались?</h2>
-      <p class="search-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <button class="search-button button" type="button">ПОИСК ГОСТИНИЦЫ В седоне</button>
+      <p class="search-text text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <button class="search-button button button-brown" type="button">ПОИСК ГОСТИНИЦЫ В седоне</button>
     </section>
 
     <section class="subscription">
       <h2 class="subscription-subtitle subtitle">Подпишитесь на рассылку</h2>
-      <p class="subscription-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <p class="subscription-text text">Только полезная информация и никакого спама, честное бойскаутское!</p>
       <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
         <input class="subscription-email" type="email" name="subscription-email" id="subscription-email"
           placeholder="Ваш e-mail" required>
-        <button class="subscription-button button" type="submit">Подписаться</button>
+        <button class="subscription-button button button-blue" type="submit">Подписаться</button>
       </form>
     </section>
   </main>
