--- a/catalog.html
+++ b/catalog.html
@@ -11,19 +11,19 @@
   <header class="page-header">
     <nav class="navigation">
 
-      <a class="navigation-logo" href="index.html" aria-current="page">
+      <a class="navigation-logo" href="index.html">
         <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седоны.">
       </a>
 
       <ul class="navigation-list">
         <li class="navigation-item">
-          <a class="navigation-link navigation-link-current" title="Текущая страница">Главная</a>
+          <a class="navigation-link" href="index.html">Главная</a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">О Седоне</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="catalog.html">Гостиницы</a>
+          <a class="navigation-link navigation-link-current" title="Текущая страница">Гостиницы</a>
         </li>
       </ul>
 
