добавили атрибуты для тестирования

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="page-wrapper">
-    <header class="page-header">
+    <header class="page-header" data-test="header">
       <nav class="navigation">
 
         <a class="navigation-logo" href="index.html" aria-current="page">
@@ -47,13 +47,13 @@
       </nav>
     </header>
 
-    <main class="main-index">
-      <section class="hero">
+    <main class="main-index" data-test="main">
+      <section class="hero" data-test="hero">
         <h1 class="visually-hidden">Sedona.</h1>
         <img class="hero-img" src="images/hero-text.svg" width="458" height="352" alt="Добро пожаловать в великолепную Седону. Потому что Гранд-Каньон отстой!">
       </section>
 
-      <section class="reasons">
+      <section class="reasons" data-test="advantages">
         <h2 class="reasons-title title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p class="reasons-text text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="reasons-list reason">
@@ -101,13 +101,13 @@
         </ul>
       </section>
 
-      <section class="search">
+      <section class="search" data-test="search">
         <h2 class="search-title title">Заинтересовались?</h2>
         <p class="search-text text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <button class="search-button button" type="button">ПОИСК ГОСТИНИЦЫ В седоне</button>
       </section>
 
-      <section class="subscription">
+      <section class="subscription" data-test="subscribe">
         <h2 class="subscription-title title">Подпишитесь на рассылку</h2>
         <p class="subscription-text text">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -118,7 +118,7 @@
       </section>
     </main>
 
-    <footer class="page-footer">
+    <footer class="page-footer" data-test="footer">
       <h2 class="visually-hidden">Контакты.</h2>
       <ul class="social-list">
         <li class="social-item">
