--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="page-wrapper">
-    <header class="page-header">
+    <header class="page-header" data-test="header">
       <nav class="navigation">
 
         <a class="navigation-logo" href="index.html">
@@ -47,7 +47,7 @@
       </nav>
     </header>
 
-    <main class="main-catalog">
+    <main class="main-catalog" data-test="main">
       <div class="filter-wrapper">
         <header class="catalog-header">
           <h1 class="catalog-title">Гостиницы Седоны</h1>
@@ -63,7 +63,7 @@
           </ol>
         </header>
 
-        <section class="catalog-filter">
+        <section class="catalog-filter" data-test="filter">
           <h2 class="visually-hidden">Список гостиниц с фильтрами.</h2>
           <form class="catalog-filter-form" action="https://echo.htmlacademy.ru/" method="get">
             <fieldset class="catalog-filter-group">
@@ -125,7 +125,7 @@
       </div>
 
 
-      <section class="hotels">
+      <section class="hotels" data-test="catalog">
         <h2 class="visually-hidden">Сортировка результата по фильтрам.</h2>
         <p class="hotels-title title">Найдено гостиниц: 38</p>
 
@@ -229,7 +229,7 @@
         </ul>
       </section>
 
-      <section class="catalog-subscription">
+      <section class="catalog-subscription" data-test="subscribe">
         <h2 class="catalog-subscription-title title">Подпишитесь на рассылку</h2>
         <p class="subscription-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -240,7 +240,7 @@
       </section>
     </main>
 
-    <footer class="page-footer">
+    <footer class="page-footer" data-test="footer">
       <h2 class="visually-hidden">Контакты.</h2>
       <ul class="social-list">
         <li class="social-item">
