убрали отступы у списков и доделали липкий футер

--- a/catalog.html
+++ b/catalog.html
@@ -47,7 +47,7 @@
       </nav>
     </header>
 
-    <main class="main-catalog" data-test="main">
+    <main class="main-catalog main-container" data-test="main">
       <div class="filter-wrapper">
         <header class="catalog-header">
           <h1 class="catalog-title">Гостиницы Седоны</h1>
