--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
       </nav>
     </header>
 
-    <main class="main-index" data-test="main">
+    <main class="main-index main-container" data-test="main">
       <section class="hero" data-test="hero">
         <h1 class="visually-hidden">Sedona.</h1>
         <img class="hero-img" src="images/hero-text.svg" width="458" height="352" alt="Добро пожаловать в великолепную Седону. Потому что Гранд-Каньон отстой!">
       </section>
 
       <section class="reasons" data-test="advantages">
-        <h2 class="reasons-title title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <h2 class="reasons-title title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
         <p class="reasons-text text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="reasons-list reason">
           <li class="reason-item dark-background">
