разметка крупных блоков

--- a/catalog.html
+++ b/catalog.html
@@ -146,6 +146,35 @@
         </a>
 
         <ul class="hotels-list hotel">
+
+          <!-- Тестовая карточка с обертками
+
+          <li class="hotel-card">
+            <a class="hotel-link" href="#">
+              <img class="hotel-image" src="images/catalog/hotel-1.jpg" alt="Вид из гостиницы Amara Resort & Spa.">
+              <h3 class="hotel-title">Amara Resort & Spa</h3>
+            </a>
+
+            <div class="hotel-wrapper">
+              <p class="hotel-type">Гостиница</p>
+              <p class="hotel-price">От 4000 ₽</p>
+            </div>
+
+            <div class="hotel-wrapper">
+              <a class="hotel-button button" href="#">подробнее</a>
+              <button class="hotel-button button button-dark" type="button">в избранное</button>
+            </div>
+
+
+            <div class="hotel-wrapper">
+              <p class="hotel-stars hotel-stars-4">
+                <span class="visually-hidden">4 звезды из 5.</span>
+              </p>
+              <p class="hotel-rating">Рейтинг: 8,5</p>
+            </div>
+
+          </li> -->
+
           <li class="hotel-card">
             <a class="hotel-link" href="#">
               <img class="hotel-image" src="images/catalog/hotel-1.jpg" alt="Вид из гостиницы Amara Resort & Spa.">
