добавили отступы для страницы каталога

--- a/catalog.html
+++ b/catalog.html
@@ -227,7 +227,7 @@
             <p class="hotel-rating">Рейтинг: 6,9</p>
           </li>
 
-          <li class="hotels-card">
+          <li class="hotel-card">
             <a class="hotel-link" href="#">
               <img class="hotel-image" src="images/catalog/hotel-4.jpg" alt="Вид из гостиницы GreenTree Inn.">
               <h3 class="hotel-title">GreenTree Inn</h3>
