:heavy_check_mark: Сборка #5

--- a/5/index.html
+++ b/5/index.html
@@ -50,7 +50,7 @@
 
     <main class="main-index main-container" data-test="main">
       <section class="hero" data-test="hero">
-        <h1 class="visually-hidden">Sedona.</h1>
+        <h1 class="visually-hidden">Городок Седона.</h1>
         <img class="hero-img" src="images/hero-text.svg" width="458" height="352" alt="Добро пожаловать в великолепную Седону. Потому что Гранд-Каньон отстой!">
       </section>
 
@@ -81,7 +81,7 @@
           <li class="reason-item dark-background">
             <img class="reason-img" src="images/reasons-2.jpg" width="800" height="385" alt="Мост Дьявола.">
             <div class="reason-item-wrapper">
-              <h3 class="reason-name">Там есть<br>мост дьявола</h3>
+              <h3 class="reason-name">Там есть <br>мост дьявола</h3>
               <p class="reason-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
           </li>
@@ -94,22 +94,23 @@
         <ul class="recommendation-list">
           <li class="recommendation-item light-background">
             <h3 class="recommendation-name">Жильё</h3>
-            <p class="recommendation-description">Рекомендуем пожить<br>в настоящем мотеле,<br>всё как в кино!</p>
+            <p class="recommendation-description">Рекомендуем пожить <br>в настоящем мотеле, <br>всё как в кино!</p>
           </li>
           <li class="recommendation-item">
             <h3 class="recommendation-name">Еда</h3>
-            <p class="recommendation-description">Всегда заказывайте<br> топовый фирменный бургер, вы не разочаруетесь!</p>
+            <p class="recommendation-description">Всегда заказывайте <br>топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="recommendation-item light-background">
             <h3 class="recommendation-name">Сувениры</h3>
-            <p class="recommendation-description">Не только китайского,<br>но и настоящего местного производства!</p>
+            <p class="recommendation-description">Не только китайского, <br>но и настоящего местного производства!</p>
           </li>
         </ul>
       </section>
 
       <section class="search" data-test="search">
-        <h2 class="search-title title">Заинтересовались?</h2>
-        <p class="search-text text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <h2 class="visually-hidden">Поиск гостиницы.</h2>
+        <p class="search-title title">Заинтересовались?</p>
+        <p class="search-text text">Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <button class="search-button button" type="button">ПОИСК ГОСТИНИЦЫ В седоне</button>
       </section>
 
