небольшие правки по размерам и отступам

--- a/catalog.html
+++ b/catalog.html
@@ -37,7 +37,7 @@
           <li class="navigation-item">
             <a class="navigation-link user-favorite" href="#">
               <span class="visually-hidden">Избранное</span>
-              <span class="user-favorite-count">12</span>
+              <!-- <span class="user-favorite-count">12</span> -->
             </a>
           </li>
           <li class="navigation-item">
