добавили обертки для картинок в reason

--- a/index.html
+++ b/index.html
@@ -59,12 +59,14 @@
         <h2 class="reasons-title title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p class="reasons-text text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="reasons-list reason">
-          <li class="reason-item reason-item-big dark-background">
+          <li class="reason-item reason-item-big">
             <div class="reason-item-wrapper">
               <h3 class="reason-name">Настоящий городок</h3>
               <p class="reason-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
-            <img class="reason-img" src="images/reasons-1.jpg" width="800" height="385" alt="Вид на двухэтажный дом в Седоне.">
+            <div class="reason-img-wrapper">
+              <img class="reason-img" src="images/reasons-1.jpg" width="800" height="385" alt="Вид на двухэтажный дом в Седоне.">
+            </div>
           </li>
           <li class="reason-item light-background">
             <h3 class="reason-name">Небольшая площадь</h3>
@@ -78,8 +80,10 @@
             <h3 class="reason-name">Мало туристов</h3>
             <p class="reason-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
-          <li class="reason-item reason-item-big dark-background">
-            <img class="reason-img" src="images/reasons-2.jpg" width="800" height="385" alt="Мост Дьявола.">
+          <li class="reason-item reason-item-big">
+            <div class="reason-img-wrapper">
+              <img class="reason-img" src="images/reasons-2.jpg" width="800" height="385" alt="Мост Дьявола.">
+            </div>
             <div class="reason-item-wrapper">
               <h3 class="reason-name">Там есть <br>мост дьявола</h3>
               <p class="reason-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
