:heavy_check_mark: Сборка #5

--- a/5/index.html
+++ b/5/index.html
@@ -65,9 +65,9 @@
               <h3 class="reason-name">Настоящий городок</h3>
               <p class="reason-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
-            <div class="reason-img-wrapper">
+            <!-- <div class="reason-img-wrapper"> -->
               <img class="reason-img" src="images/reasons-1.jpg" width="800" height="385" alt="Вид на двухэтажный дом в Седоне.">
-            </div>
+            <!-- </div> -->
           </li>
           <li class="reason-item light-background">
             <h3 class="reason-name">Небольшая площадь</h3>
