добавили размеры картинкам товаров

--- a/catalog.html
+++ b/catalog.html
@@ -164,7 +164,7 @@
         <ul class="hotels-list hotel">
           <li class="hotel-card">
             <a class="hotel-link" href="#">
-              <img class="hotel-image" src="images/catalog/hotel-1.jpg" alt="Вид из гостиницы Amara Resort & Spa.">
+              <img class="hotel-image" src="images/catalog/hotel-1.jpg" alt="Вид из гостиницы Amara Resort & Spa." width="300" height="212">
               <h3 class="hotel-title">Amara Resort & Spa</h3>
             </a>
 
@@ -175,7 +175,7 @@
 
             <div class="hotel-wrapper">
               <a class="hotel-button button" href="#">подробнее</a>
-              <button class="hotel-button button button-dark" type="button">в избранное</button>
+              <a class="hotel-button button button-dark" type="button">в избранное</a>
             </div>
 
 
@@ -189,7 +189,7 @@
 
           <li class="hotel-card">
             <a class="hotel-link" href="#">
-              <img class="hotel-image" src="images/catalog/hotel-2.jpg" alt="Вид из гостиницы Villas at Poco Diablo.">
+              <img class="hotel-image" src="images/catalog/hotel-2.jpg" alt="Вид из гостиницы Villas at Poco Diablo." width="300" height="212">
               <h3 class="hotel-title">Villas at Poco Diablo</h3>
             </a>
 
@@ -200,7 +200,7 @@
 
             <div class="hotel-wrapper">
               <a class="hotel-button button" href="#">подробнее</a>
-            <a class="hotel-button button button-favorite" href="#">в избранном</a>
+              <a class="hotel-button button button-favorite" href="#">в избранном</a>
             </div>
 
             <div class="hotel-wrapper">
@@ -213,7 +213,7 @@
 
           <li class="hotel-card">
             <a class="hotel-link" href="#">
-              <img class="hotel-image" src="images/catalog/hotel-3.jpg" alt="Вид из гостиницы Desert Quail Inn.">
+              <img class="hotel-image" src="images/catalog/hotel-3.jpg" alt="Вид из гостиницы Desert Quail Inn." width="300" height="212">
               <h3 class="hotel-title">Desert Quail Inn</h3>
             </a>
 
@@ -224,7 +224,7 @@
 
             <div class="hotel-wrapper">
               <a class="hotel-button button" href="#">подробнее</a>
-            <button class="hotel-button button button-dark" type="button">в избранное</button>
+              <a class="hotel-button button button-dark" type="button">в избранное</a>
             </div>
 
 
@@ -238,7 +238,7 @@
 
           <li class="hotel-card">
             <a class="hotel-link" href="#">
-              <img class="hotel-image" src="images/catalog/hotel-4.jpg" alt="Вид из гостиницы GreenTree Inn.">
+              <img class="hotel-image" src="images/catalog/hotel-4.jpg" alt="Вид из гостиницы GreenTree Inn." width="300" height="212">
               <h3 class="hotel-title">GreenTree Inn</h3>
             </a>
 
@@ -249,7 +249,7 @@
 
             <div class="hotel-wrapper">
               <a class="hotel-button button" href="#">подробнее</a>
-            <button class="hotel-button button button-dark" type="button">в избранное</button>
+              <a class="hotel-button button button-dark" type="button">в избранное</a>
             </div>
 
 
