поправили отступы и заменили ссылки на кнопки в карточке товара
и ссылки на кнопки при переключении видов карточек

--- a/catalog.html
+++ b/catalog.html
@@ -149,15 +149,15 @@
           </select>
 
           <div class="hotels-view-buttons">
-            <a class="hotels-view hotels-view-current" href="#">
+            <button class="hotels-view hotels-view-current" type="button">
               <span class="visually-hidden">Показать плиткой.</span>
-            </a>
-            <a class="hotels-view" href="#">
+            </button>
+            <button class="hotels-view" type="button">
               <span class="visually-hidden">Показать крупными карточками (слайдшоу).</span>
-            </a>
-            <a class="hotels-view" href="#">
+            </button>
+            <button class="hotels-view" type="button">
               <span class="visually-hidden">Показать списком.</span>
-            </a>
+            </button>
           </div>
         </div>
 
@@ -175,7 +175,7 @@
 
             <div class="hotel-wrapper">
               <a class="hotel-button button" href="#">подробнее</a>
-              <a class="hotel-button button button-dark" type="button">в избранное</a>
+              <button class="hotel-button button button-dark" type="button">в избранное</button>
             </div>
 
 
@@ -200,7 +200,7 @@
 
             <div class="hotel-wrapper">
               <a class="hotel-button button" href="#">подробнее</a>
-              <a class="hotel-button button button-favorite" href="#">в избранном</a>
+              <button class="hotel-button button button-favorite" type="button">в избранном</button>
             </div>
 
             <div class="hotel-wrapper">
@@ -224,7 +224,7 @@
 
             <div class="hotel-wrapper">
               <a class="hotel-button button" href="#">подробнее</a>
-              <a class="hotel-button button button-dark" type="button">в избранное</a>
+              <button class="hotel-button button button-dark" type="button">в избранное</button>
             </div>
 
 
@@ -249,7 +249,7 @@
 
             <div class="hotel-wrapper">
               <a class="hotel-button button" href="#">подробнее</a>
-              <a class="hotel-button button button-dark" type="button">в избранное</a>
+              <button class="hotel-button button button-dark" type="button">в избранное</button>
             </div>
 
 
