добавили переносы слов

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <ul class="recommendation-list">
           <li class="recommendation-item light-background">
             <h3 class="recommendation-name">Жильё</h3>
-            <p class="recommendation-description">Рекомендуем пожить&nbspв настоящем мотеле, <br>всё как в кино!</p>
+            <p class="recommendation-description">Рекомендуем пожить в&nbspнастоящем мотеле, <br>всё как в кино!</p>
           </li>
           <li class="recommendation-item">
             <h3 class="recommendation-name">Еда</h3>
